# jazck-advent-of-code-2024

./: .gitignore
main_rust/: Cargo.toml
main_rust/advent_of_code/: Cargo.toml
main_rust/advent_of_code/src/: lib.rs
main_rust/advent_of_code/src/day1/: description.md  mod.rs
main_rust/advent_of_code/src/day10/: mod.rs
main_rust/advent_of_code/src/day11/: mod.rs
main_rust/advent_of_code/src/day12/: mod.rs
main_rust/advent_of_code/src/day13/: mod.rs
main_rust/advent_of_code/src/day14/: mod.rs
main_rust/advent_of_code/src/day15/: mod.rs
main_rust/advent_of_code/src/day16/: mod.rs
main_rust/advent_of_code/src/day17/: input.example4  input.example5  mod.rs
main_rust/advent_of_code/src/day18/: mod.rs
main_rust/advent_of_code/src/day19/: mod.rs
main_rust/advent_of_code/src/day2/: description.md  mod.rs
main_rust/advent_of_code/src/day3/: description.md  mod.rs
main_rust/advent_of_code/src/day4/: description.md  mod.rs
main_rust/advent_of_code/src/day5/: mod.rs
main_rust/advent_of_code/src/day6/: mod.rs
main_rust/advent_of_code/src/day7/: mod.rs
main_rust/advent_of_code/src/day8/: mod.rs
main_rust/advent_of_code/src/day9/: mod.rs
main_rust/advent_of_code/src/daytemplate/: mod.rs
main_rust/emojifier/: Cargo.toml
main_rust/emojifier/src/: lib.rs
main_rust/runner/: Cargo.toml
main_rust/runner/src/: main.rs
