[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
geometry = "0.2.0"
itertools = "0.13.0"
memoize = "0.4.2"
nalgebra = "0.33.2"
polygonical = "0.5.0"
rayon = "1.10.0"
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"

[profile.test]
opt-level = 3              # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

[profile.dev]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

[profile.bench]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
